# document-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  GEMINI_SETUP.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py
src/api/: auth.py  history.py  query.py  upload.py
src/models/: auth_schemas.py  history.py  history_schemas.py  schemas.py  user.py
src/services/: document_processor.py  rag_engine.py  security.py  vector_store.py
static/: app.js  index.html  styles.css
